fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,16 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100vh;
+    background: rgb(189,0,159);
+    background: linear-gradient(135deg, rgba(189,0,159,1) 50%, rgba(158,0,123,1) 50%);
+}
+
 body {
-    /* height: 100vh; */
     margin-top: 1.3rem;
     margin-bottom: 1.3rem;
     width: 100vw;
-    background: rgb(189,0,159);
-    background: linear-gradient(135deg, rgba(189,0,159,1) 50%, rgba(158,0,123,1) 50%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,6 +35,8 @@ body {
 
 .form-list {
     height: 100%;
+    display: flex;
+    flex-direction: column;
     overflow-y: auto;
 }
 
@@ -44,7 +49,6 @@ body {
 .list-form {
     display: flex;
     gap: 1rem;
-    /* align-items: center; */
     justify-content: center;
 }
 
